# Zero-MemoryMCP

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Implementation.md  LICENSE  README.md  check-coverage.ps1  ci-check.bat  ci-check.ps1  ci-check.sh  deny.toml  quick-coverage.ps1  test_output.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  codecov.yml  nightly.yml  release.yml  security.yml
benches/: memory_ops.rs  scanning.rs
src/: lib.rs  main.rs
src/config/: defaults.rs  loader.rs  mod.rs  validator.rs
src/core/: mod.rs
src/core/types/: address.rs  error.rs  mod.rs  process_info.rs  scan_result.rs  value.rs
src/memory/: mod.rs  reader.rs  scanner.rs  writer.rs
src/memory/reader/: basic.rs  mod.rs  safe.rs
src/memory/regions/: enumerator.rs  filter.rs  mapper.rs  mod.rs  protection.rs
src/memory/writer/: backup.rs  basic.rs  mod.rs  safe.rs
src/process/: enumerator.rs  handle.rs  info.rs  mod.rs
src/process/info/: mod.rs  modules.rs
src/process/manager/: attacher.rs  detacher.rs  mod.rs
src/process/privileges/: checker.rs  debug.rs  elevate.rs  mod.rs
src/windows/: mod.rs
src/windows/bindings/: kernel32.rs  mod.rs  ntdll.rs  psapi.rs
src/windows/types/: handle.rs  memory_info.rs  mod.rs  module_info.rs
src/windows/utils/: error_codes.rs  mod.rs  string_conv.rs
tests/: basic_reader_coverage_test.rs  comprehensive_coverage_test.rs  coverage_95_percent_test.rs  integration_test.rs  main_coverage_test.rs  memory_operations_test.rs  memory_reader_comprehensive_test.rs  memory_reader_error_paths_test.rs  memory_reading_test.rs  memory_writer_test.rs  module_enumeration_test.rs  privilege_comprehensive_test.rs  privilege_management_test.rs  process_attachment_test.rs  safe_reader_coverage_test.rs  utils_coverage_test.rs  writer_coverage_test.rs
