[package]
name = "memory-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Memory-MCP Contributors"]
description = "High-performance MCP server for Windows memory manipulation"
repository = "https://github.com/yourusername/memory-mcp"
license = "MIT"
keywords = ["memory", "windows", "mcp", "process", "scanning"]
categories = ["development-tools", "api-bindings"]

[lib]
name = "memory_mcp"
path = "src/lib.rs"

[dependencies]
# Windows API bindings
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
]}

# Legacy Windows API bindings for compatibility
winapi = { version = "0.3", features = [
    "handleapi",
    "memoryapi",
    "processthreadsapi",
    "psapi",
    "tlhelp32",
    "winnt",
    "minwindef",
    "basetsd",
    "ntdef",
    "errhandlingapi",
    "securitybaseapi",
    "winbase"
]}

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Hex parsing
hex = "0.4"

# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# Static initialization
lazy_static = "1.4"

# MCP protocol (placeholder - replace with actual MCP crate when available)
# TODO: Replace with modern JSON-RPC implementation
# jsonrpc-core = "18.0"
# jsonrpc-tcp-server = "18.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
pretty_assertions = "1.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
inherits = "release"

# TODO: Add benchmarks once core functionality is implemented
# [[bench]]
# name = "scanning"
# harness = false
# 
# [[bench]]
# name = "memory_ops"
# harness = false